@@ -4,6 +4,9 @@ Revision history for Server-Control
 
 0.20  Aug 15, 2012
 
+- Fix error_log default for Starman - RT #79008 (RSAVAGE)
+- Mention that server_root must be created - RT #79009 (RSAVAGE)
+
 0.19  Aug 15, 2012
 
 - Fix httpd_binary for backward compatibility
